force-app/main/default/objects/ssot__ContactPointEmail__dlm/fields/ssot__EmailDomain__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmailDomain__c</fullName>
    <label>Email Domain</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmailDomain</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>