force-app/main/default/objects/ssot__ContactPointEmail__dlm/fields/ssot__EmailMailBox__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmailMailBox__c</fullName>
    <label>Email Mail Box</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmailMailBox</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>