force-app/main/default/objects/ssot__ContactPointEmail__dlm/fields/ssot__ForBusinessUse__c.field-meta.xml
<CustomField>
    <fullName>ssot__ForBusinessUse__c</fullName>
    <label>For Business Use</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ForBusinessUse</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>