force-app/main/default/objects/ssot__ContactPointEmail__dlm/fields/ssot__ProfileLastUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProfileLastUpdatedDate__c</fullName>
    <label>Profile Last Updated Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProfileLastUpdatedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>