force-app/main/default/objects/ssot__ContactPointEmail__dlm/fields/ssot__ssot_Id_map_ssot_Id_1629904018724__c.field-meta.xml
<CustomField>
    <fullName>ssot__ssot_Id_map_ssot_Id_1629904018724__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ssot_Id_map_ssot_Id_1629904018724</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>ssot_Id_map_ssot_Id_1629904018724</relationshipLabel>
    <relationshipName>ssot_Id_map_ssot_Id_1629904018724</relationshipName>
    <type>Lookup</type>
</CustomField>